# trnr-lib

./: .clang-format  CMakeLists.txt  LICENSE  LICENSE.md  README.md
clip/: aw_cliponly2.h  aw_clipsoftly.h  aw_tube2.h  clip.h  fold.h  tube.h  wavefolder.h
companding/: alaw.h  mulaw.h  ulaw.h
dynamics/: aw_pop2.h  oneknob.h  pump.c  pump.h  rms_detector.h
filter/: aw_eq.h  chebyshev.h  spliteq.h  ybandpass.h  yhighpass.h  ylowpass.h  ynotch.h  ysvf.h
gfx/: dice.h
oversampling/: LICENSE.txt  Oversampler.h  oversampler.h
seq/: sequence.h  sh_sequence.h
sequencer/: combine_seq.h  simple_seq.h
synth/: ivoice.h  midi_event.h  midi_synth.h  note_event.h  synth.h  triplex.h  tx_envelope.h  tx_macro.h  tx_operator.h  tx_parameter_mapping.h  tx_sineosc.h  tx_voice.h  voice_allocator.h
util/: audio_buffer.h  audio_math.c  audio_math.h  averager.h  demo_noise.h  format.h  retro_buf.h  sample.h  smoother.h
